# clauderfall

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  TODO.md  TODO_FEAT_DESIGN_RUNTIME.md  TODO_FEAT_DISCOVERY_RUNTIME.md  TODO_FEAT_MCP_ADAPTER.md  TODO_FEAT_RUNTIME_SKELETON.md  TODO_FEAT_SESSION_LIFECYCLE_RUNTIME.md  TODO_FEAT_SHARED_ARTIFACT_RUNTIME.md  installer.py  pyproject.toml
.clauderfall/: clauderfall.db
.codex-home/.codex/: config.toml
docs/: README.md  clauderfall.md  codex_mcp.md  context_engine.md  context_packet.md  design_artifact.md  design_engine.md  design_task_contract.md  discovery_artifact.md  discovery_design_contract.md  discovery_engine.md  future_state.md  task_artifact.md  task_context_contract.md  task_engine.md
docs/design/: README.md  artifact_checkpoint_metadata.md  artifact_checkpoint_semantics.md  artifact_deletion_control_surface.md  artifact_filesystem_layout.md  artifact_persistence_format.md  clauderfall.md  clauderfall_product_brief.md  clauderfall_v2_product_brief.md  context_engine.md  context_packet.md  continue.md  handoff.md  (+46 more)
examples/: codex-mcp-config.toml
scripts/: clauderfall_global.py  install_claude_global.py  install_claude_mcp.py  install_claude_mcp.sh  install_codex_global.py  install_codex_mcp.py  register_claude_global.py  register_claude_mcp.py  register_codex_global.py  register_codex_mcp.py  register_codex_mcp.sh  remove_claude_global.py  remove_claude_mcp.py  remove_claude_mcp.sh  remove_codex_global.py  remove_codex_mcp.py  run_skill_harness.sh
tests/: conftest.py  test_cli.py  test_context_cli.py  test_context_persistence.py  test_context_service.py  test_context_validation.py  test_design_cli.py  test_design_persistence.py  test_design_validation.py  test_discovery_draft_service.py  test_discovery_frontmatter_sync.py  test_discovery_persistence.py  test_discovery_validation.py  test_installer.py  test_mcp_server.py  test_packaged_skills.py  test_runtime_skeleton.py  test_skill_harness.py  test_skill_loader.py  test_task_cli.py  test_task_persistence.py  test_task_validation.py  test_trace_link_persistence.py
(+138 files in other folders)
