[project]
name = "clauderfall"
version = "0.1.0"
description = "Precision context system for code-generating agents."
readme = "docs/README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.11,<3",
  "PyYAML>=6.0,<7",
]

[project.scripts]
clauderfall-mcp = "clauderfall.mcp.stdio:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6.1,<7",
  "pytest-xdist>=3.6,<4",
  "openai>=1.0,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clauderfall"]

[tool.pytest.ini_options]
testpaths = ["tests"]
